--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.html linguist-detectable=false
+*.cshtml linguist-detectable=false
 *.js linguist-detectable=false
 *.css linguist-detectable=false
 
